err/django-locksmith.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_locksmith-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/locksmith'...
Listing './lib/python3.5/site-packages/locksmith/auth'...
Listing './lib/python3.5/site-packages/locksmith/auth/management'...
Listing './lib/python3.5/site-packages/locksmith/auth/management/commands'...
Compiling './lib/python3.5/site-packages/locksmith/auth/management/commands/apireport.py'...
***   File "./lib/python3.5/site-packages/locksmith/auth/management/commands/apireport.py", line 29
    print 'pushing logs for %s' % date
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/locksmith/auth/management/commands/resetkeys.py'...
***   File "./lib/python3.5/site-packages/locksmith/auth/management/commands/resetkeys.py", line 11
    print 'resetting all keys for %s' % settings.LOCKSMITH_API_NAME
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/locksmith/hub'...
Listing './lib/python3.5/site-packages/locksmith/hub/management'...
Listing './lib/python3.5/site-packages/locksmith/hub/management/commands'...
Compiling './lib/python3.5/site-packages/locksmith/hub/management/commands/pushkeys.py'...
***   File "./lib/python3.5/site-packages/locksmith/hub/management/commands/pushkeys.py", line 31
    except urllib2.HTTPError, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/locksmith/hub/migrations'...
Compiling './lib/python3.5/site-packages/locksmith/hub/tasks.py'...
***   File "./lib/python3.5/site-packages/locksmith/hub/tasks.py", line 22
    print u"Skipping push_key for {k} because all KeyPublicationStatus objects are PUBLISHED.".format(k=key.key)
                                                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/locksmith/hub/templates'...
Listing './lib/python3.5/site-packages/locksmith/hub/templates/locksmith'...
Listing './lib/python3.5/site-packages/locksmith/hub/templatetags'...
Listing './lib/python3.5/site-packages/locksmith/lightauth'...
Listing './lib/python3.5/site-packages/locksmith/logparse'...
Listing './lib/python3.5/site-packages/locksmith/logparse/management'...
Listing './lib/python3.5/site-packages/locksmith/logparse/management/commands'...
Compiling './lib/python3.5/site-packages/locksmith/logparse/management/commands/apireportfromlogs.py'...
***   File "./lib/python3.5/site-packages/locksmith/logparse/management/commands/apireportfromlogs.py", line 27
    print 'pushing logs for %s' % parsed_date.strftime('%Y-%m-%d')
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/locksmith/mongoauth'...
Listing './lib/python3.5/site-packages/locksmith/mongoauth/management'...
Listing './lib/python3.5/site-packages/locksmith/mongoauth/management/commands'...
Compiling './lib/python3.5/site-packages/locksmith/mongoauth/management/commands/apireport.py'...
***   File "./lib/python3.5/site-packages/locksmith/mongoauth/management/commands/apireport.py", line 19
    print 'pushing logs for %s' % date
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/locksmith/static'...
Listing './lib/python3.5/site-packages/locksmith/static/bootstrap'...
Listing './lib/python3.5/site-packages/locksmith/static/bootstrap/css'...
Listing './lib/python3.5/site-packages/locksmith/static/bootstrap/img'...
Listing './lib/python3.5/site-packages/locksmith/static/bootstrap/js'...
Listing './lib/python3.5/site-packages/locksmith/static/datatables'...
Listing './lib/python3.5/site-packages/locksmith/static/datatables/css'...
Listing './lib/python3.5/site-packages/locksmith/static/datatables/images'...
Listing './lib/python3.5/site-packages/locksmith/static/datatables/js'...
Listing './lib/python3.5/site-packages/locksmith/static/scripts'...
Listing './lib/python3.5/site-packages/locksmith/static/styles'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
